# esp32-c3lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wokwi.toml
.github/workflows/: ci.yml
main/: CMakeLists.txt  app.c3
main/wrappers/: idf.c3  newlib.c3
